--- a/style.css
+++ b/style.css
@@ -206,6 +206,7 @@ width: fit-content;
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
+  margin: auto;
   font-family: 'Segoe UI', sans-serif;
   background-image: url("https://usagif.com/wp-content/uploads/gif/outerspace-70.gif");
 }
@@ -230,6 +231,8 @@ width: fit-content;
 /* Text styling */
 .content-section {
   flex: 1;
+  background: linear-gradient(90deg, #010a01, #012f01, #034d03, #012f01, #010a01);
+  background: linear-gradient(90deg, #010a01, #012f01, #034d03, #012f01, #010a01);
   background-color: #1c1c1c;
   color: #f5f5f5;
   background: radial-gradient(circle at top left, #316333, #1b1b1b);
@@ -343,7 +346,7 @@ width: fit-content;
   text-align: center;
   font-size: 2rem;
   font-weight: 700;
-  color: #ff4d4d;
+  color: #fdcdcd;
   margin-bottom: 2.5rem;
   display: flex;
   justify-content: space-between;
